# fe-levels-gui

./: .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  fe_levels_gui.js  fe_levels_gui_bg.wasm  index.html
.github/workflows/: rust.yml
assets/: sw.js
fe-levels/: Cargo.toml  Readme.md  character.json  data.json
fe-levels/data/characters/: seth.json
fe-levels/examples/json-oriented/: main.rs
fe-levels/src/: lib.rs  main.rs
fe-levels/src/analysis/: mod.rs
fe-levels/src/interface/: mod.rs
fe-levels/src/repl/: gbafe.rs  mod.rs
src/: app.rs  lib.rs  main.rs
src/app/: manager.rs  plotter.rs  progression.rs  sit.rs  weapon.rs
src/app/progression/: gba.rs
src/app/weapon/: gba.rs
