[package]
name = "fe-levels"
version = "0.0.1"
authors = ["Potato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]


[dependencies]
serde_json = "^1"
serde_with = "2"
#repl-rs = "^0.2"
#strsim = "^0.10"
contracts = "0.6"

itertools = "^0.10"
serde = { version = "^1", features = ["derive"] }
